# metrics-lib

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  basic_example.cpp  system_monitor.cpp
include/: collector.hpp  metric.hpp
include/metrics/: counter.hpp  gauge.hpp  histogram.hpp  info.hpp
src/: collector.cpp  histogram.cpp
